--- a/datos/informes/ARENA2_ACCIDENTES.jrxml
+++ b/datos/informes/ARENA2_ACCIDENTES.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.10.0.final using JasperReports Library version 6.10.0-unknown  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="d1" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="08643c55-92f1-4f98-95fb-1f7907f04306">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Listado de accidentes" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="08643c55-92f1-4f98-95fb-1f7907f04306">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Accidentes.xml"/>
 	<subDataset name="Dataset1" uuid="47c53e5b-98c4-418a-94cc-63308d356214">
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="accidentes"/>
